@@ -190,7 +190,7 @@ woas.parser.place_holder = function (i, separator) {
 };
 
 // create a preformatted block ready to be displayed
-woas._make_preformatted = function(text) {
+woas._make_preformatted = function(text, add_style) {
 	var cls, tag, p = text.indexOf("\n");
 	if (p == -1) {
 		cls = "wiki_preformatted";
@@ -206,7 +206,10 @@ woas._make_preformatted = function(text) {
 	// convert the newlines
 	if (this.browser.ie)
 		xhtml = xhtml.replace(/\n/g, "\r\n");
-	return "<"+tag+" class=\""+cls+"\">"+xhtml+"</"+tag+">";
+	if (typeof add_style != "undefined")
+		add_style = " style=\""+add_style+"\"";
+	else add_style = "";
+	return "<"+tag+" class=\""+cls+"\""+add_style+">"+xhtml+"</"+tag+">";
 }
 
 // THIS is the method that you should override for your custom parsing needs
