@@ -5,11 +5,11 @@
 <script woas_permanent="1" type="text/javascript">
 /* <![CDATA[ */
 
-/* DFQRCTsKlU-0000209-START */
+/* DFQRCTsKlU-0000212-START */
 
 var woas = {"version": "0.12.0"};
 
-var __marker = "DFQRCTsKlU-0000209";
+var __marker = "DFQRCTsKlU-0000212";
 
 woas["config"] = {
 "permit_edits":true,
@@ -39,7 +39,7 @@ var backstack = [
 var page_titles = [
 ];
 
-/* DFQRCTsKlU-0000209-DATA */
+/* DFQRCTsKlU-0000212-DATA */
 var page_attrs = [];
 
 var page_mts = [];
@@ -47,7 +47,7 @@ var page_mts = [];
 var pages = [
 ];
 
-/* DFQRCTsKlU-0000209-END */
+/* DFQRCTsKlU-0000212-END */
 
 /* ]]> */ </script>
 <title woas_permanent="1">Main Page</title>
@@ -199,7 +199,7 @@ Wiki Code:
   <input class="woas_editor_button" name="img" id="img" title="Image link" value="Image" onclick="setHTMLImage()" type="submit" />
   <input class="woas_editor_button" name="url" id="url" title="External link" value="Link" onclick="setHTMLUrl()" type="submit" />
 </div>
-<textarea id="woas_editor" style="width: 989px; height: 388px;" rows="0" cols="0"></textarea> 
+<textarea id="woas_editor" style="width: 989px; height: 386px;" rows="0" cols="0"></textarea> 
 </div>
 <div style="visibility: visible;" id="woas_debug_panel">
 <p>&nbsp;<span style="font-size: large; font-weight: bold;">Debug console</span>&nbsp;&nbsp;<input value="Toggle" onclick="$.toggle('woas_debug_console')" type="button" /></p>
